syntax = "proto3";

import "validate/validate.proto";
import "students.proto";

package main;

option go_package = "proto/gen;grpcapipb";

// All the RPC's related to teachers
service TeachersService {
    // GetTeachers retrieves a list of teachers based on the provided criteria
    rpc GetTeachers (GetTeachersRequest) returns (Teachers);
    // AddTeachers adds new teachers to the system
    rpc AddTeachers (Teachers) returns (Teachers);
    // UpdateTeachers updates existing teacher information
    rpc UpdateTeachers (Teachers) returns (Teachers);   
    // DeleteTeachers removes teachers from the system by their IDs
    rpc DeleteTeachers (TeacherIds) returns (DeleteTeachersConfirmation);
    // GetStudentsByClassTeacher retrieves all students for a specific class teacher
    rpc GetStudentsByClassTeacher (TeacherId) returns (Students);
    // GetStudentCountByClassTeacher returns the total number of students for a class teacher
    rpc GetStudentCountByClassTeacher (TeacherId) returns (StudentCount);
}

message DeleteTeachersConfirmation {
    string status = 1;
    repeated string deleted_ids = 2;
}

message TeacherId {
    string id = 1;
}

message TeacherIds {
    repeated TeacherId ids = 1;
}

message GetTeachersRequest {
    Teacher teacher = 1;
    repeated SortField sort_by = 2;
}

message Teacher {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    string class = 5;
    string subject = 6;
}

message Teachers {
    repeated Teacher teachers = 1;
}


